@startuml api
!include _estilo.puml
left to right direction

package "api (FastAPI)" {
  class ApplicationFactory {
  - _lifespan()
  + create() -> FastAPI
  }
  class RoleChecker {
  - __call__(user: User) -> User
  }



}

package "api.schemas.dto (Pydantic)" {
  class LoginRequest {
  + username: str
  + password: str
  }
  class RegisterRequest {
  + username: str
  + password: str
  + role: str
  + display_name: str
  }
  class PatientRequest {
  + name: str
  + phone: str
  + email: str
  + birth_date: str
  + document: str
  + insurance_provider: str
  + insurance_card: str
  + responsible_name: str
  + notes: str
  + treatment: str
  + telegram_id: str
  + active: bool
  }
  class PatientUpdateRequest {
  + name: Optional[str]
  + phone: Optional[str]
  + email: Optional[str]
  + birth_date: Optional[str]
  + document: Optional[str]
  + insurance_provider: Optional[str]
  + insurance_card: Optional[str]
  + responsible_name: Optional[str]
  + notes: Optional[str]
  + treatment: Optional[str]
  + telegram_id: Optional[str]
  + active: Optional[bool]
  }
  class DentistRequest {
  + name: str
  + cro: str
  + specialty: str
  + email: str
  + phone: str
  + color: str
  + active: bool
  + availability: dict[str, list[list[str]]]
  }
  class DentistUpdateRequest {
  + name: Optional[str]
  + cro: Optional[str]
  + specialty: Optional[str]
  + email: Optional[str]
  + phone: Optional[str]
  + color: Optional[str]
  + active: Optional[bool]
  + availability: Optional[dict[str, list[list[str]]]]
  }
  class ProcedureRequest {
  + name: str
  + description: str
  + duration_minutes: int
  + price: float
  + active: bool
  }
  class ProcedureUpdateRequest {
  + name: Optional[str]
  + description: Optional[str]
  + duration_minutes: Optional[int]
  + price: Optional[float]
  + active: Optional[bool]
  }
  class AppointmentRequest {
  + patient_id: str
  + start: datetime
  + dentist_id: str
  + procedure_id: str
  + notes: str
  + allow_overbook: bool
  + priority: str
  }
  class EmergencyAppointmentRequest {
  + patient_id: str
  + reason: str
  + start: Optional[datetime]
  }
  class RescheduleRequest {
  + start: datetime
  }
  class StatusRequest {
  + status: str
  }
  class CancelRequest {
  + reason: str
  }
  class ChatRequest {
  + session_id: str
  + message: str
  + display_name: str
  }
  class StaffReplyRequest {
  + message: str
  }
  class HandoffRequest {
  + handoff: bool
  }
  class FAQRequest {
  + question: str
  + answer: str
  + tags: list[str]
  }
  class FAQUpdateRequest {
  + question: Optional[str]
  + answer: Optional[str]
  + tags: Optional[list[str]]
  + active: Optional[bool]
  }
  class KnowledgeDocumentRequest {
  + title: str
  + content: str
  + tags: list[str]
  }
  class KnowledgeDocumentUpdateRequest {
  + title: Optional[str]
  + content: Optional[str]
  + tags: Optional[list[str]]
  + active: Optional[bool]
  }
  class SettingsRequest {
  + clinic_name: Optional[str]
  + address: Optional[str]
  + phone: Optional[str]
  + email: Optional[str]
  + opening_hour: Optional[str]
  + closing_hour: Optional[str]
  + lunch_start: Optional[str]
  + lunch_end: Optional[str]
  + working_days: Optional[list[int]]
  + slot_minutes: Optional[int]
  + inactivity_minutes: Optional[int]
  + emergency_slot_minutes: Optional[int]
  + max_emergency_per_day: Optional[int]
  + handoff_notice_cooldown_minutes: Optional[int]
  + persona: Optional[str]
  }
  class IntegrationCredentialsRequest {
  + values: dict[str, Any]
  + enable: Optional[bool]
  }
}

package "api routers" {
  class AuthRouter
  class ChatRouter
  class ConversationsRouter
  class DashboardRouter
  class IntegrationsRouter
  class PatientsRouter
  class DentistsRouter
  class ProceduresRouter
  class AppointmentsRouter
  class FAQRouter
  class KnowledgeRouter
  class SettingsRouter
}

package "composition root" {
  class AppConfig {
  + database_path: Path
  + credentials_path: Path
  + groq_api_key: str
  + groq_model: str
  + host: str
  + port: int
  + cors_origins: tuple[str, ...]
  + reminder_interval_seconds: int
  + reminder_window_hours: int
  + agent_max_iterations: int
  + inactivity_check_seconds: int
  + reindex_seconds: int
  + autostart_telegram: bool
  + from_env() -> 'AppConfig'
  }
  class ApplicationContainer {
  - _build_tools() -> ToolRegistry
  + startup() -> None
  + shutdown() -> None
  }
}

package "contexto" <<Frame>> {
  class IAgent
  class IAnalyticsService
  class IAppointmentService
  class IAuthService
  class IConversationService
  class IDentistService
  class IFAQService
  class IIntegrationRegistry
  class IKnowledgeService
  class IPatientService
  class IProcedureService
  class ISettingsService
}

ApplicationFactory *-- AppointmentsRouter
ApplicationFactory *-- AuthRouter
ApplicationFactory *-- ChatRouter
ApplicationFactory *-- ConversationsRouter
ApplicationFactory *-- DashboardRouter
ApplicationFactory *-- DentistsRouter
ApplicationFactory *-- FAQRouter
ApplicationFactory *-- IntegrationsRouter
ApplicationFactory *-- KnowledgeRouter
ApplicationFactory *-- PatientsRouter
ApplicationFactory *-- ProceduresRouter
ApplicationFactory *-- SettingsRouter
ApplicationFactory ..> ApplicationContainer : usa
AppointmentsRouter ..> IAppointmentService
AuthRouter ..> IAuthService
ChatRouter ..> IAgent
ChatRouter ..> IConversationService
ConversationsRouter ..> IConversationService
DashboardRouter ..> IAnalyticsService
DentistsRouter ..> IDentistService
FAQRouter ..> IFAQService
IntegrationsRouter ..> IIntegrationRegistry
KnowledgeRouter ..> IKnowledgeService
PatientsRouter ..> IPatientService
ProceduresRouter ..> IProcedureService
SettingsRouter ..> ISettingsService
@enduml
